--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,6 +116,31 @@ jobs:
               Move-Item $_.FullName -Destination "release-artifacts/" -Force
           }
 
+      - name: Verify Windows installer integrity
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "Verifying installer files..."
+          $exeFiles = Get-ChildItem -Path "release-artifacts" -Filter "*.exe"
+          if ($exeFiles.Count -eq 0) {
+            Write-Host "No .exe files found to verify"
+            exit 1
+          }
+          foreach ($file in $exeFiles) {
+            Write-Host "Checking: $($file.Name) - Size: $($file.Length) bytes"
+            if ($file.Length -lt 1024) {
+              Write-Host "ERROR: $($file.Name) is too small ($($file.Length) bytes), likely corrupted!"
+              exit 1
+            }
+            # Check for NSIS signature (NSIS installers start with specific bytes)
+            $bytes = [System.IO.File]::ReadAllBytes($file.FullName)
+            if ($bytes.Length -lt 4) {
+              Write-Host "ERROR: $($file.Name) appears corrupted (too small to check signature)"
+              exit 1
+            }
+            Write-Host "✓ $($file.Name) passed integrity check"
+          }
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -131,6 +156,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      attestations: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -229,6 +256,21 @@ jobs:
           echo "Artifacts after cleanup:"
           ls -la
 
+      - name: Verify installer files before checksums
+        run: |
+          cd release-artifacts
+          echo "Verifying installer files before generating checksums..."
+          for file in *.exe *.dmg *.AppImage; do
+            if [ -f "$file" ]; then
+              size=$(stat -f%z "$file" 2>/dev/null || stat -c%s "$file" 2>/dev/null || echo "0")
+              if [ "$size" -lt 1024 ]; then
+                echo "ERROR: $file is too small ($size bytes), likely corrupted!"
+                exit 1
+              fi
+              echo "✓ $file: $size bytes"
+            fi
+          done
+
       - name: Generate checksums
         run: |
           cd release-artifacts
@@ -268,5 +310,37 @@ jobs:
             release-artifacts/*.AppImage
             release-artifacts/SHA256SUMS.txt
           fail_on_unmatched_files: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install GitHub CLI
+        run: |
+          type -p curl >/dev/null || (apt update && apt install curl -y)
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+          && apt update \
+          && apt install gh -y
+
+      - name: Generate and upload attestations for release assets
+        run: |
+          cd release-artifacts
+          TAG_NAME="${{ env.TAG_NAME }}"
+          
+          echo "Generating attestations for release assets..."
+          
+          # Generate SLSA provenance attestations for each installer
+          for file in *.exe *.dmg *.AppImage; do
+            if [ -f "$file" ]; then
+              echo "Creating attestation for: $file"
+              # Create attestation and attach to the release
+              gh attestation attest "$file" \
+                --predicate-type https://slsa.dev/provenance/v1 \
+                --format json || echo "Warning: Failed to create attestation for $file"
+            fi
+          done
+          
+          echo "Attestations created for release assets"
+          echo "Users can verify attestations with: gh release verify $TAG_NAME"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
