--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "streamgo",
-	"version": "1.1.0-beta",
+	"version": "1.2.0",
 	"description": "Electron-based Stremio client with plugins and themes support.",
 	"main": "./dist/main.js",
 	"scripts": {
