--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "streamgo",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "Electron-based Stremio client with plugins and themes support.",
 	"main": "./dist/main.js",
 	"scripts": {
@@ -135,14 +135,25 @@
 						"**/*"
 					]
 				}
-			]
+			],
+			"requestedExecutionLevel": "asInvoker",
+			"sign": null,
+			"verifyUpdateCodeSignature": false
 		},
 		"nsis": {
 			"oneClick": true,
 			"perMachine": false,
 			"allowElevation": true,
-			"deleteAppDataOnUninstall": false
+			"allowToChangeInstallationDirectory": false,
+			"deleteAppDataOnUninstall": false,
+			"runAfterFinish": true,
+			"artifactName": "${productName}-${version}-Windows.${ext}",
+			"unicode": true,
+			"differencePackage": false,
+			"warningsAsErrors": false,
+			"include": "build/installer.nsh"
 		},
+		"compression": "normal",
 		"mac": {
 			"target": "dmg",
 			"icon": "images/icons/main.png",
