--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "streamgo",
-	"version": "1.7.0",
+	"version": "1.8.0",
 	"description": "Electron-based Stremio client with plugins and themes support.",
 	"main": "./dist/main.js",
 	"scripts": {
@@ -63,7 +63,7 @@
 		"appId": "com.bo0ii.streamgo",
 		"productName": "StreamGo",
 		"asar": true,
-		"icon": "images/icons/main.png",
+		"icon": "images/icon.png",
 		"protocols": [
 			{
 				"name": "stremio",
@@ -127,6 +127,7 @@
 					]
 				}
 			],
+			"icon": "images/icon.png",
 			"extraResources": [
 				{
 					"from": "stremio-service/stremio-service-windows",
@@ -155,7 +156,7 @@
 		"compression": "normal",
 		"mac": {
 			"target": "dmg",
-			"icon": "images/icons/main.png",
+			"icon": "images/icon.png",
 			"extraResources": [
 				{
 					"from": "stremio-service/stremio-service-macos",
@@ -168,7 +169,7 @@
 		},
 		"linux": {
 			"target": "AppImage",
-			"icon": "images/icons/main.png",
+			"icon": "images/icon.png",
 			"extraResources": [
 				{
 					"from": "stremio-service/stremio-service-linux",
