--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.90.1",
 		"@xhayper/discord-rpc": "^1.2.1",
+		"anime4k.js": "^0.0.7",
 		"discord-api-types": "^0.37.119",
 		"electron-prompt": "^1.7.0",
 		"electron-updater": "^5.3.0",
@@ -67,7 +68,9 @@
 		"protocols": [
 			{
 				"name": "stremio",
-				"schemes": ["stremio"]
+				"schemes": [
+					"stremio"
+				]
 			}
 		],
 		"directories": {
@@ -127,7 +130,7 @@
 					]
 				}
 			],
-			"icon": "images/icon.png",
+			"icon": "images/icon.ico",
 			"extraResources": [
 				{
 					"from": "stremio-service/stremio-service-windows",
@@ -138,7 +141,7 @@
 				}
 			],
 			"requestedExecutionLevel": "asInvoker",
-			"signAndEditExecutable": false,
+			"signAndEditExecutable": true,
 			"verifyUpdateCodeSignature": false
 		},
 		"nsis": {
